@@ -2422,21 +2422,25 @@ void menuProcSetup(uint8_t event)
 */
 
 #ifdef FRSKY
-		uint8_t vCountItems = 25; //25 is default
+		uint8_t vCountItems = 21; //21 is default
 		switch (g_eeGeneral.speakerMode){
 				//beeper
 				case 0:
-						vCountItems = 25;
+						vCountItems = 21;
 						break;
 				//piezo speaker
 			 	case 1:
-			 			vCountItems = 28;
+			 			vCountItems = 24;
 			 			break;
 			 	//pcmwav
 			  case 2:
-						vCountItems = 25;
+						vCountItems = 23;
 						break;	  	
-		}
+		}		
+		if((g_eeGeneral.speakerMode == 1 || g_eeGeneral.speakerMode == 2) && g_eeGeneral.frskyinternalalarm == 0){ // add in alert red/org/yel
+				vCountItems = vCountItems + 3;
+		}		
+		
 #else 
 		uint8_t vCountItems = 21; //21 is default
 		switch (g_eeGeneral.speakerMode){
@@ -2450,7 +2454,7 @@ void menuProcSetup(uint8_t event)
 			 			break;
 			 	//pcmwav
 			  case 2:
-						vCountItems = 21;
+						vCountItems = 22;
 						break;	  	
 		}
 #endif
@@ -2549,8 +2553,8 @@ if(g_eeGeneral.speakerMode == 1){
         if((y+=FH)>7*FH) return;
     }subN++;
 
-
-
+}
+if(g_eeGeneral.speakerMode == 1 || g_eeGeneral.speakerMode == 2 ){
     if(s_pgOfs<subN) {
         lcd_puts_P(0, y,PSTR("Haptic Strength"));
         lcd_outdezAtt(PARAM_OFS,y,g_eeGeneral.hapticStrength,(sub==subN ? INVERS : 0)|LEFT);
@@ -2742,58 +2746,70 @@ if(g_eeGeneral.speakerMode == 1){
 
 //frsky alert mappings
 #ifdef FRSKY
-    
-		if(s_pgOfs<subN) {
-        g_eeGeneral.frskyinternalalarm = onoffMenuItem( g_eeGeneral.frskyinternalalarm, y, PSTR("Int. Frsky alarm"), sub, subN, event ) ;
-        if((y+=FH)>7*FH) return;
-    }subN++;
-  
-	
-	for ( uint8_t i = 0 ; i < 3 ; i += 1 )
-  {
-    uint8_t b ;
 
-    b = g_eeGeneral.FRSkyYellow ;    // Done here to stop a compiler warning
-    if(s_pgOfs<subN)
-		{
-			
-			if ( i == 0 )
-			{
-        lcd_puts_P(0, y,PSTR("Alert [Yel]"));
-			}
-			else if ( i == 1 )
-			{
-        b = g_eeGeneral.FRSkyOrange ;
-        lcd_puts_P(0, y,PSTR("Alert [Org]"));
-			}
-			else if ( i == 2 )
-			{
-        b = g_eeGeneral.FRSkyRed ;
-        lcd_puts_P(0, y,PSTR("Alert [Red]"));
-			}
-      //lcd_putsnAtt(PARAM_OFS - FW - 4, y, PSTR("Tone1 ""Tone2 ""Tone3 ""Tone4 ""Tone5 ""hTone1""hTone2""hTone3""hTone4""hTone5")+6*b,6,(sub==subN ? INVERS:0));
-      lcd_putsnAtt(PARAM_OFS - FW - 4, y, PSTR("Warn1 ""Warn2 ""Cheep ""Ring  ""SciFi ""Robot ""Chirp ""Tada  ""Crickt""Siren ""AlmClk""Ratata""Tick  ""Haptc1""Haptc2""Haptc3")+6*b,6,(sub==subN ? INVERS:0));
-      if(sub==subN)
-			{
-				//CHECK_INCDEC_H_GENVAR(event, b, 0, 9);
-				CHECK_INCDEC_H_GENVAR(event, b, 0, 15);
-				if ( i == 0 )
-				{
-		      g_eeGeneral.FRSkyYellow = b ;
-				}
-				else if ( i == 1 )
-				{
-		      g_eeGeneral.FRSkyOrange = b ;
-				}
-				else if ( i == 2 )
-				{
-		      g_eeGeneral.FRSkyRed = b ;
-				}
-			  audio.frskyeventSample(b);
-			}
-			if((y+=FH)>7*FH) return;
-    }subN++;
-  }
+		if(g_eeGeneral.speakerMode == 1 || g_eeGeneral.speakerMode == 2){
+						if(s_pgOfs<subN) {
+				        g_eeGeneral.frskyinternalalarm = onoffMenuItem( g_eeGeneral.frskyinternalalarm, y, PSTR("Int. Frsky alarm"), sub, subN, event ) ;
+				        if((y+=FH)>7*FH) return;
+				    }subN++;
+		}		    
+				    
+    if((g_eeGeneral.speakerMode == 1 || g_eeGeneral.speakerMode == 2) && g_eeGeneral.frskyinternalalarm == 0){ 
+    
+
+					  
+						
+						for ( uint8_t i = 0 ; i < 3 ; i += 1 )
+					  {
+					    uint8_t b ;
+					
+					    b = g_eeGeneral.FRSkyYellow ;    // Done here to stop a compiler warning
+					    if(s_pgOfs<subN)
+							{
+								
+								if ( i == 0 )
+								{
+					        lcd_puts_P(0, y,PSTR("Alert [Yel]"));
+								}
+								else if ( i == 1 )
+								{
+					        b = g_eeGeneral.FRSkyOrange ;
+					        lcd_puts_P(0, y,PSTR("Alert [Org]"));
+								}
+								else if ( i == 2 )
+								{
+					        b = g_eeGeneral.FRSkyRed ;
+					        lcd_puts_P(0, y,PSTR("Alert [Red]"));
+								}
+					      //lcd_putsnAtt(PARAM_OFS - FW - 4, y, PSTR("Tone1 ""Tone2 ""Tone3 ""Tone4 ""Tone5 ""hTone1""hTone2""hTone3""hTone4""hTone5")+6*b,6,(sub==subN ? INVERS:0));
+					      if(g_eeGeneral.speakerMode == 1){
+					      			lcd_putsnAtt(PARAM_OFS - FW - 4, y, PSTR("Warn1 ""Warn2 ""Cheep ""Ring  ""SciFi ""Robot ""Chirp ""Tada  ""Crickt""Siren ""AlmClk""Ratata""Tick  ""Haptc1""Haptc2""Haptc3")+6*b,6,(sub==subN ? INVERS:0));
+								}
+					      if(g_eeGeneral.speakerMode == 2){
+					      			lcd_putsnAtt(PARAM_OFS - FW - 4, y, PSTR("Trck1 ""Trck2 ""Trck3 ""Trck4 ""Trck4 ""Trck5 ""Trck6 ""Trck7 ""Trck8 ""Trck9 ""Trck10""Trck11""Trck12""Haptc1""Haptc2""Haptc3")+6*b,6,(sub==subN ? INVERS:0));
+								}								
+					      if(sub==subN)
+								{
+									//CHECK_INCDEC_H_GENVAR(event, b, 0, 9);
+									CHECK_INCDEC_H_GENVAR(event, b, 0, 15);
+									if ( i == 0 )
+									{
+							      g_eeGeneral.FRSkyYellow = b ;
+									}
+									else if ( i == 1 )
+									{
+							      g_eeGeneral.FRSkyOrange = b ;
+									}
+									else if ( i == 2 )
+									{
+							      g_eeGeneral.FRSkyRed = b ;
+									}
+								  audio.frskyeventSample(b);
+								}
+								if((y+=FH)>7*FH) return;
+					    }subN++;
+					  }
+		}			  
 #endif
 
     if(s_pgOfs<subN) {
